Fixed wrapping issue and added Hover effects

--- a/index.css
+++ b/index.css
@@ -60,8 +60,6 @@ input {
   color: white;
   border-radius: 0.8rem;
   cursor: pointer;
-
-  box-shadow: 1px 4px 10px rgba(255, 255, 255, 0.1);
 }
 .tasks-container {
   width: 100%;
@@ -73,11 +71,11 @@ input {
 }
 li {
   list-style-type: none;
-  display: inline-block;
   margin-left: 1rem;
-  white-space: nowrap;
   flex-grow: 1;
   color: #f5f5f5;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 span {
   width: 45%;
@@ -89,6 +87,7 @@ span {
   border-radius: 0.4rem;
   justify-content: flex-start;
   align-items: center;
+
   margin-top: 2rem;
 }
 #check {
@@ -97,4 +96,9 @@ span {
 }
 .tasks-container::-webkit-scrollbar {
   display: none;
+}
+span:hover {
+  transition-duration: 800ms;
+  transform: translateY(-0.1rem);
+  box-shadow: 1px 4px 10px rgba(255, 255, 255, 0.1);
 }
